@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.8 2003/09/30 17:59:59 sjg Exp $
+$NetBSD: distinfo,v 1.9 2004/02/02 06:40:11 sjg Exp $
 
-SHA1 (mk-20030930.tar.gz) = decc07fbfef6df78fe69df08c47484e9f9cad87e
-Size (mk-20030930.tar.gz) = 24971 bytes
+SHA1 (mk-20040201.tar.gz) = ffe2eb6ac726949fc1a2fa6b2d003e66b095dcd5
+Size (mk-20040201.tar.gz) = 25248 bytes
